--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
-
-
-
+:root {
+    body {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 150px;
+        margin-bottom: 25px;
+        text-align: center;
+        background-image: url("assets/Background2.png");
+        background-repeat: no-repeat;
+    }
+}
